# CastleKeep

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Account.h  Security.h  account.hpp  auditLog.hpp  database.hpp  security.hpp  transaction.hpp
logs/: transaction_log.txt
src/: Account.cpp  AuditLog.cpp  Database.cpp  Security.cpp  Transaction.cpp  main.cpp
tests/: CMakeLists.txt  test_Account.cpp  test_Database.cpp  test_Security.cpp  test_Transaction.cpp
